# university-bachelor-semester-project-3

./: .gitignore  Cargo.toml  README.adoc  flake.nix
docs/: code_of_conduct.adoc  contributing.adoc
src/lib/: action.rs  client.rs  lobby.rs  mod.rs  server.rs
