[package]
edition = "2021"
name = "bachelor-semester-project-3"
version = "0.1.0"

[lib]
name = "bachelor_semester_project_3_lib"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.75"
educe = "0.4.23"
tap = "1.0.1"
thiserror = "1.0.50"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
